# agent

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  deploy.sh  dev.docker-compose.yml  discovery.docker-compose.yml  docker-compose.prod.yml  docker-compose.yml  launch.py  nonroot.docker-compose.yml  package.xml  root.docker-compose.yml  ros-entrypoint.sh  ros1.Dockerfile  test.docker-compose.yml
.github/workflows/: aws.yml
bag_utils/: local_upload.py  upload.py  upload.sh
certs/: client.crt  client.key  gateway.pem  rootCA.crt
docker/: Dockerfile  discovery.docker-compose.yml  docker-compose.yml  entrypoint.sh  nonroot.docker-compose.yml  root.docker-compose.yml
launch/: launch.py
scripts/: gif.py
src/: mqtt_alive_publisher.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: UploadBytes.msg  WrappedBytes.msg
src/interfaces/srv/: Record.srv  Upload.srv  UploadComplete.srv
src/woden_monitor/: CMakeLists.txt  package.xml
src/woden_monitor/include/: config.hpp  disk_dto.hpp  disk_monitor.hpp  mqtt_facade.hpp  recording_dto.hpp  recording_manager.hpp  recording_trigger.hpp  ros2_dto.hpp  ros2_monitor.hpp  utils.hpp
src/woden_monitor/src/: disk_monitor.cpp  mqtt_alive_publisher.cpp  mqtt_facade.cpp  recording_manager.cpp  ros2_monitor.cpp  utils.cpp  woeden_monitor.cpp
src/woeden_agent/: CMakeLists.txt  package.xml
src/woeden_agent/include/: config.hpp  disk_dto.hpp  disk_monitor.hpp  key_value_comparison.hpp  mqtt_facade.hpp  recording_dto.hpp  recording_manager.hpp  recording_trigger.hpp  ros2_dto.hpp  ros2_monitor.hpp  status_array_comparison.hpp  status_comparison.hpp  utils.hpp
src/woeden_agent/launch/: woeden_agent_launch.yaml
src/woeden_agent/src/: config.cpp  disk_monitor.cpp  key_value_comparison.cpp  main.cpp  mqtt_facade.cpp  recording_dto.cpp  recording_manager.cpp  recording_trigger.cpp  ros2_monitor.cpp  status_array_comparison.cpp  status_comparison.cpp  utils.cpp
src/woeden_agent/woeden_agent/: example_conf.json  test_trigger_worker.py  trigger_worker.py  upload_worker.py  woeden_trigger.py
src/woeden_monitor/: package.xml
src/woeden_monitor/include/: mqtt_facade.hpp  recording_manager.hpp  recording_trigger.hpp  ros2_dto.hpp  ros2_monitor.hpp  utils.hpp
src/woeden_monitor/src/: main.cpp  recording_manager.cpp  recording_trigger.cpp
test/: multinode.docker-compose.yml  setup_ec2.sh
test/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
test/devel/include/custom_ros1_msg/: CustomMessageExample.h
test/devel/lib/custom_ros1_msg/: custom_publisher.py
test/devel/lib/pkgconfig/: custom_ros1_msg.pc
test/devel/lib/python3/dist-packages/custom_ros1_msg/: __init__.py
test/devel/lib/python3/dist-packages/custom_ros1_msg/msg/: _CustomMessageExample.py  __init__.py
test/devel/share/common-lisp/ros/custom_ros1_msg/msg/: CustomMessageExample.lisp  _package.lisp  _package_CustomMessageExample.lisp  custom_ros1_msg-msg.asd
test/devel/share/custom_ros1_msg/cmake/: custom_ros1_msg-msg-extras.cmake  custom_ros1_msg-msg-paths.cmake  custom_ros1_msgConfig.cmake
test/devel/share/gennodejs/ros/custom_ros1_msg/msg/: CustomMessageExample.js  _index.js
test/devel/share/roseus/ros/custom_ros1_msg/: manifest.l
test/devel/share/roseus/ros/custom_ros1_msg/msg/: CustomMessageExample.l
