<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>woeden_agent</name>
  <version>1.0.0</version>
<<<<<<<< HEAD:src/woeden_monitor/package.xml
  <description>Agent designed to run on the robots of Woeden's users.</description>
========
  <description>Run this agent on your robot for monitoring, remote control, and data collection capabilities.</description>
>>>>>>>> d175854 (Rename, enable username/passwords, and update README.md):src/woeden_agent/package.xml
  <maintainer email="alec@woeden.com">alecbell</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>PahoMqtt</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
