<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>woeden_agent</name>
  <version>1.0.0</version>
  <description>Run this agent on your robot for monitoring, remote control, and data collection capabilities.</description>
  <maintainer email="alec@woeden.com">alecbell</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>PahoMqtt</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
